--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Azure Machine Learning Notebook
+*.amlignore
+*.amltmp
+*.ipynb_aml_checkpoints/
+*.ipynb_aml_checkpoints
